force-app/src/objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Actions__c</fullName>
        <label>Actions</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Information__c</fullName>
        <label>Internal Information</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <label>Resources</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Help &amp; Training</label>
    <listViews>
        <fullName>Accreditation_related_Articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_CHANNEL_CSP</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Accreditation Articles</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CIS_SF_Knowledge_base</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_APP</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_CSP</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>IS_CHANNEL_PRM</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CIS Help &amp; Training</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Evaluators</fullName>
        <booleanFilter>(1 OR 4) AND 2  AND 3 AND 5</booleanFilter>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TITLE</field>
            <operation>contains</operation>
            <value>Evaluator</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>CONTACT - SSE Evaluator Overview (Cheat Sheet)</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>contains</operation>
            <value>PRP</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>Arranging travel and accommodation for evaluators</value>
        </filters>
        <label>Evaluators</label>
    </listViews>
    <listViews>
        <fullName>Knowledge_Articles_All_categories</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>IS_CHANNEL_PKB</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Knowledge Articles - All categories</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <pluralLabel>Help &amp; Training</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instructions</fullName>
        <active>true</active>
        <label>Instructions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Table_of_contents</fullName>
        <active>true</active>
        <label>Table of contents</label>
    </recordTypes>
</CustomObject>